# ToDoAlchemy

./: .pre-commit-config.yaml  LICENSE  README.md  init_db.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
flask_todo/: __init__.py  auth.py  models.py  todo.py
flask_todo/static/: style.css
flask_todo/templates/: base.html
flask_todo/templates/todo/: create.html  index.html  update.html
flaskr/: __init__.py  auth.py  blog.py  db.py  schema.sql
flaskr/static/: style.css
flaskr/templates/: base.html
flaskr/templates/auth/: login.html  register.html
flaskr/templates/blog/: create.html  index.html
tests/: conftest.py  test_auth.py  test_blog.py  test_db.py  test_factory.py  test_models.py  test_todo.py
