[project]
name = "todoalchemy"
version = "0.1.0"
authors = [
    { name="Jesper Anteryd", email="jesper.anteryd@gmail.com" },
]
description = "A ToDo app built with Flask and SQLAlchemy."

readme = "README.md"

dependencies = [
    "flask",
    "SQLalchemy"
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"


[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["flask_todo"]
